[tool.poetry]
name = "hackathon_scanner"
version = "0.1.0"
description = ""
authors = ["Alex Volkov <alexv@fragmentprotocol.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
web3 = "^5.18.0"
PyPubSub = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
